# ndelement-dual

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: run-tests.yml  run-weekly-tests.yml  style-checks.yml
examples/: lagrange_mass_matrix.rs  rt_nc_mass_matrix.rs  rt_rbc_mass_matrix.rs  rt_rbc_mass_matrix_quad.rs
src/: assembly.rs  dual.rs  grid.rs  lib.rs
src/assembly/: function.rs  mass_matrix.rs
src/dual/: bc.rs  representation.rs
src/grid/: dual.rs  refined.rs
