[features]
strict = []

[package]
name = "ndelement-dual"
version = "0.1.0"
edition = "2024"
authors = [
    "Matthew Scroggs <rust@mscroggs.co.uk>",
    "Ignacia Fierro-Piccardo <ignaciapiccardo@gmail.com>",
]
description = "Dual elements for ndelement and ndgrid."
license = "BSD-3-Clause"
homepage = "https://github.com/mscroggs/ndelement-dual"
repository = "https://github.com/mscroggs/ndelement-dual"
readme = "README.md"
keywords = ["numerics"]
categories = ["mathematics", "science"]

[dependencies]
ndelement = { git = "https://github.com/bempp/nd.git" }
ndfunctionspace = { git = "https://github.com/bempp/nd.git" }
ndgrid = { git = "https://github.com/bempp/nd.git" }
rlst = { version = "0.5" }
itertools = "0.14.*"
quadraturerules = "0.9.0"

[dev-dependencies]
approx = "0.5"
rand = "0.9"

[target.'cfg(target_os = "macos")'.dependencies]
blas-src = { version = "0.14", features = ["accelerate"]}
lapack-src = { version = "0.13", features = ["accelerate"]}

[target.'cfg(target_os = "linux")'.dependencies]
openblas-src = { version = "0.10", features = ["system"]}
lapack-src = { version = "0.13", features = ["netlib"]}
blas-src = { version = "0.14", features = ["blis"]}
